Editing 2 Mar draft

--- a/2025/2025-02-23-wir.md
+++ b/2025/2025-02-23-wir.md
@@ -29,7 +29,7 @@ But beyond the raw numbers, Buterin raises some points worth considering about *
 
 Solana has certainly become the go-to platform lately for developers launching memecoins, which by definition [carry no intrinsic value](https://www.investopedia.com/meme-coin-6750312). That includes the Solana-based coins trading under the tickers TRUMP, MELANIA, and LIBRA that have recently sparked government corruption scandals in the [U.S.](https://www.cnn.com/2025/01/20/tech/meme-coins-donald-melania-trump-intl-hnk/index.html) and [Argentina](https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917).
 
-If Buterin, who [leads the Ethereum Foundation](https://cointelegraph.com/news/buterin-announces-leadership-changes-ethereum-foundation), wants to cede such sketchy ground to Solana and focus instead on quality over quantity, that probably wouldn't be the worst thing for Ethereum long term.
+Call me crazy, but if Buterin, who [leads the Ethereum Foundation](https://cointelegraph.com/news/buterin-announces-leadership-changes-ethereum-foundation), wants to cede such sketchy ground to Solana and focus instead on quality over quantity, I think that probably wouldn't be the worst thing for Ethereum long term. Or web3 in general.
 
 ### Week in Review: Feb. 16-22, 2025
 
