--- a/2025/2025-03-02-wir.md
+++ b/2025/2025-03-02-wir.md
@@ -13,70 +13,35 @@
 
 <!-- 150-word lead item. Some possibilities:
 
+- CARR: Riff on AoM intvu with author Nicholas Carr re: some of the downsides of digital communication. This could also fit in the news roundup, perhaps in odds & ends: https://www.artofmanliness.com/people/relationships/podcast-1054-familiarity-breeds-contempt-and-other-underappreciated-consequences-of-digital-communication/
+
+- ETH Denver: Riff on links to high-priority event. https://www.youtube.com/@ETHDenver/streams
+
 - BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
-
-- TKTK: Another possibility
-
-- TKTK: Another possibility
 
 -->
 
 ### Week in Review: Feb. 23 to March 1, 2025
 
-<!--
+- SEC drops Robinhood case. ([Barron's](https://www.msn.com/en-us/money/other/robinhood-stock-pops-as-sec-investigation-into-crypto-arm-wraps-why-that-matters/ar-AA1zGlUl))
 
-Some leftovers from last week...
+- Bybit followup: <!-- Links tk -->
 
-| Bybit hack hurt ETH price: https://decrypt.co/307215/ethereum-bitcoin-fall-bybit-confirms-hack
-
-- Ethereum transaction fees hit their lowest level since 2020: https://www.theblock.co/post/341625/ethereum-transaction-fees-plummet-70-hitting-lowest-levels-since-2020
-
-- New tools for cross-chain transactions: https://www.coindesk.com/tech/2025/02/18/ethereum-developers-release-new-initiative-to-simplify-cross-chain-transactions
-
-- New ether ETF: https://cryptoslate.com/franklin-templeton-bitcoin-ethereum-etf-begins-trading-in-the-us/
-
--->
-
-<!--
-
-- WSJ's Weil on Coinbase's balance sheet: https://www.wsj.com/finance/currencies/coinbase-crypto-ownership-accounting-7c97b26a?st=oZ3Uue&reflink=desktopwebshare_permalink
-
-- Fortune reports Musk is raising a new funding round for Twitter at a $44 billion valuation -- the same price he paid for it. That's a farcial valuation.
-
-- Czech central banker likes bitcoin: https://www.coindesk.com/markets/2025/02/19/bitcoin-not-to-be-lumped-together-with-crypto-czech-central-bank-chief-michl
-
-- Catizen's success could help web3 gaming in general: https://www.coindesk.com/sponsored-content/has-success-finally-found-web3-gaming-catizen-s-growth-and-financial-results-offer-a-clear-affirmation
-
-- Senate Banking hearing on crypto regulation next week: https://www.coindesk.com/policy/2025/02/21/u-s-senate-banking-committee-sets-hearing-on-crypto-legislation-next-week
-
-- Chainalysis data on U.S.-sanctioned countries using crypto: https://www.coindesk.com/policy/2025/02/19/u-s-sanctioned-countries-such-as-iran-leaning-heavily-into-crypto-chainalysis
-
-- Palantir stock hit, possible weak outlook: https://www.cnbc.com/2025/02/19/palantir-shares-pentagon-cuts-trump.html
+- Senate Banking hearing on crypto regulation... <!-- Need followup on this late in the week. Curtain raiser story at https://www.coindesk.com/policy/2025/02/21/u-s-senate-banking-committee-sets-hearing-on-crypto-legislation-next-week -->
 
 - 4-part coindesk series on bitcoin in El Salvador. https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-how-bitcoin-taught-a-nation-to-dream
 
-- https://www.washingtonpost.com/opinions/2025/02/10/ev-chargers-government-infrastructure/
+- Chainalysis data on U.S.-sanctioned countries using crypto: https://www.coindesk.com/policy/2025/02/19/u-s-sanctioned-countries-such-as-iran-leaning-heavily-into-crypto-chainalysis
 
-- Korea is building a new AI data center with self-hosted power generation. https://www.wsj.com/tech/ai/ai-data-center-with-up-to-3-gigawatts-of-power-is-envisioned-for-south-korea-5141bd77
+- WaPo on Alaskans hacking gadgets to help Ukraine: https://www.washingtonpost.com/nation/2025/02/24/ukraine-russia-nome-alaska/
 
-- Mexico is threatening to sue over Google Maps' decision to re-label the body of water on its northeastern coast as the "Gulf of America." (<!-- Link TK
+### Community
 
-- Update on Lee Enterprises cyberattack: https://news.google.com/read/CBMilwFBVV95cUxNdHRJRmRZU0EtcFB0MWNqTElXeVdrYTRkN3JyVXZVTlhoNTBvZmZHWFF1RGVNS3J0eWJEczRlM2E1WkZ6RmlLVzRMSU1aU2NYYUFkaTRRdGpHbS1kdTA0Ym51UGpvVlk4VDkxZWtnd01ZZkNRWG1EYmM0VGJtVGRoZnRfZ0dUNFVETFN2RC0zUnJ3TDVMaVFr?hl=en-US&gl=US&ceid=US%3Aen
-
-- ICYMI BuzzFeed has a new transformation plan: https://slate.com/technology/2025/02/buzzfeed-social-media-network-island-ai-jonah-peretti.html
-https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917
+<!--
 
 - https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
 
 -->
-
-
-
-- tk
-- tk
-- tk
-
-### Community
 
 - tk
 - tk
@@ -85,9 +50,7 @@ https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f
 
 - New Brooklyn apartment tower will create new energy efficiency standards. <!-- Link TK. Bloomberg (and others?) have covered -->
 
-- tk
-
-- tk
+- Coffee tourism: https://www.salon.com/2025/02/23/from-beans-to-brews-coffee-tourism-is-percolating-across-the-globe/
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
