Updating March 2025 drafts

--- a/2025/2025-03-02-wir.md
+++ b/2025/2025-03-02-wir.md
@@ -1,56 +1,68 @@
-# TKTK
-## TKTKTK
+# Considering the Free World ex America
+## Even sans a certain superpower, the combined capabilities of global democracies may be more than we think.
 
-![Broken dishes](https://w3w.news/img/chuttersnap-5000.jpg)
+![A globe, with the Atlantic Ocean turned to the center position](https://w3w.news/img/juliana-kozoski-1920.jpg)
+*Photo by Juliana Kozoski via Unsplash*
 
-*Photo by CHUTTERSNAP via Unsplash*
+*<strong>We'll lead off with something a little different this time:</strong> A guest post from Jon Shell, chairman of [Social Capital Partners](https://socialcapitalpartners.ca/), a Toronto nonprofit that seeks to expand wealth-building opportunities and social mobility in Canada.*
 
-*<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
+*I've done only some light copyediting below to Jon's [original post](https://www.linkedin.com/feed/update/urn:li:activity:7301360821714960384) on LinkedIn. It immediately struck me as worth sharing with the w3w audience given the week's seismic geopolitical events, the increasing role of Silicon Valley in U.S. politics, and the repercussions that could yet come for the global tech industry.*
+
+*As an American, I'll also say that now feels like a good time to turn the mic over to a neighbor and just listen a minute. At least some of us still know how to do that. -- PM*  
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda.
+<strong>By [Jon Shell](https://www.linkedin.com/feed/update/urn:li:activity:7301360821714960384)</strong>
 
-<!-- 150-word lead item. Some possibilities:
+**Europe seems ready to lead again. Canada wants in.**
 
-- CARR: Riff on AoM intvu with author Nicholas Carr re: some of the downsides of digital communication. This could also fit in the news roundup, perhaps in odds & ends: https://www.artofmanliness.com/people/relationships/podcast-1054-familiarity-breeds-contempt-and-other-underappreciated-consequences-of-digital-communication/
+As if we needed another reason, watching Ukrainian President Volodymyr Zalensky beaten up in the White House has to be the last straw. Watching the United Kingdom's prime minister groveling at Donald Trump's feet. Watching my entire country suffer a constant sense of anxiety and doom, refreshing their screens for news of the latest attack.
 
-- ETH Denver: Riff on links to high-priority event. https://www.youtube.com/@ETHDenver/streams
+There’s no sense pretending that NATO, NORAD, the UN or any other organizations where America is the most powerful voice matter anymore.
 
-- BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
+We need something new.
 
--->
+750 million people. 34% of the global economy. Vast resources, powerful military, industrial and nuclear capacity, and some of the world’s most powerful companies.
+
+That’s what you get when you combine the European Union, Japan, Canada, the UK, South Korea, and Australia. Bigger, richer, and with more resources than the U.S. Able to stand up to aggression from anyone.
+
+This needs to be the new project.
+
+There is no balance in today’s world. We can’t sit around and wait to see what happens, hoping it ends in four years. Because it might not – what happens if Trump is followed by eight years of J.D. Vance? What’s left at the end of that?
+
+This new bloc wasn’t possible in 1945. America was key. And as long as our alliances held, there was no reason to change.
+
+But it’s different now. Canada, Germany, and Japan might not have had a lot in common 80 years ago, but we do now. Market-based economies. High per-capita incomes. Socialized health care. A commitment to the safety of our residents. A new bloc is possible, with as many shared values and beliefs as we ever had with the U.S.
+
+America kept us all safe for a long time. We got complacent. But the world doesn’t need to hang on the American President’s every word. The rest of us are big, strong, and rich. And it is as plain as this: The world as we know it simply cannot survive an America that is as powerful as this, and that acts like this. Without a new bloc strong enough to rival America, there are simply no guarantees.
+
+I get it -- we're Canada. We need to trade with the U.S. That's fine. Germany bought gas from Russia before they invaded Ukraine, and everyone trades with China. It won't be easy, but some deal on trade will happen. This is bigger than trade. This is about saving the world we recognize.
+
+It’s not an overnight project. It may take a decade to put all the pieces together. But if we don't start now, it may soon be too late.
 
 ### Week in Review: Feb. 23 to March 1, 2025
 
-- SEC drops Robinhood case. ([Barron's](https://www.msn.com/en-us/money/other/robinhood-stock-pops-as-sec-investigation-into-crypto-arm-wraps-why-that-matters/ar-AA1zGlUl))
+The week's notable headlines about emerging tech:
 
-- Bybit followup: <!-- Links tk -->
+- **Token prices and other risky assets suffered an abysmal February,** hurt by rising fears of global recession. Bitcoin slid 17% for the month, its worst performance since June 2022. The selling was fueled by a record $3.3 billion in outflows from U.S.-listed bitcoin funds. ([MarketWatch](https://www.msn.com/en-us/money/economy/a-bitcoin-rout-accompanied-by-record-etf-outflows-what-investors-need-to-know-about-faster-money/ar-AA1A3eJS))
 
-- Senate Banking hearing on crypto regulation... <!-- Need followup on this late in the week. Curtain raiser story at https://www.coindesk.com/policy/2025/02/21/u-s-senate-banking-committee-sets-hearing-on-crypto-legislation-next-week -->
+- **But March is off to a promising start.** Prices rallied over the weekend after Donald Trump unveiled plans via Truth Social to include bitcoin, ether, Solana, Ripple, and Cardano in a proposed strategic crypto reserve for the federal government. ([CoinDesk](https://www.coindesk.com/policy/2025/03/02/trump-to-establish-u-s-crypto-reserve))
 
-- 4-part coindesk series on bitcoin in El Salvador. https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-how-bitcoin-taught-a-nation-to-dream
+- **Robinhood announced** it has received a letter from the U.S. Securities and Exchange Commission ending the agency's investigation of Robinhood's crypto unit without taking further enforcement action. ([Barron's](https://www.msn.com/en-us/money/other/robinhood-stock-pops-as-sec-investigation-into-crypto-arm-wraps-why-that-matters/ar-AA1zGlUl))
 
-- Chainalysis data on U.S.-sanctioned countries using crypto: https://www.coindesk.com/policy/2025/02/19/u-s-sanctioned-countries-such-as-iran-leaning-heavily-into-crypto-chainalysis
+- **A new U.S. Senate subcomittee on digital assets** held its first meeting. The group will pursue clearer stablecoin regulation as its first priority. ([CoinDesk](https://www.coindesk.com/policy/2025/02/26/stablecoins-take-center-stage-at-senate-s-first-digital-assets-subcommittee-hearing))
 
-- WaPo on Alaskans hacking gadgets to help Ukraine: https://www.washingtonpost.com/nation/2025/02/24/ukraine-russia-nome-alaska/
+- **Just a few months into 2025,** the recent $1.4 billion Bybit hack puts the crypto market [on pace](https://decrypt.co/308115/crypto-hackers-nearing-2024-exploits-bybit-theft) to easily surpass the $2.2 billion lost to hacks in *all* of 2024. The FBI says North Korean-backed hackers are [responsible](https://apnews.com/article/bybit-exchange-crypto-hack-north-korea-7c8335c1397261554138090c2c38f457) for the Bybit heist. Yikes. 
 
-### Community
+- **ICYMI:** CoinDesk's Tom Carreras recently published a four-part series from El Salvador about how the country's embrace of bitcoin came about and how it's going. Here are the links to [Part 1](https://www.coindesk.com/coindesk-news/2025/02/12/el-salvador-dispatch-berlin-the-bitcoin-marvel-hidden-in-the-mountains), [Part 2](https://www.coindesk.com/coindesk-news/2025/02/13/el-salvador-dispatch-searching-for-bitcoin-city-the-modern-el-dorado), [Part 3](https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-the-origins-of-the-bitcoin-experiment), and [Part 4](https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-how-bitcoin-taught-a-nation-to-dream).
 
-<!--
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
-
--->
-
-- tk
-- tk
+- **A community of makers in Nome, Alaska,** has been rigging together drone navigation jammers and other gadgets to aid the Ukrainian war effort. ([Washington Post](https://news.google.com/read/CBMiggFBVV95cUxOUEotbERHaUdLLWx6bjNKMFhUVXpJU1NzeU9BV1hzVGRrTkRmVFdPWmR2bDc1Y0xIblN4YmNDMHVYZnZUMkJNYlJxSHhhelpRQmVGZ1ZjbmFKY0JoX3QtQVZhR0xFaHR3NTM1U3p2NDhiMWNzaTNWaWktMjVVemR3OFBn?hl=en-US&gl=US&ceid=US%3Aen))
 
 ### Odds & Ends
 
-- New Brooklyn apartment tower will create new energy efficiency standards. <!-- Link TK. Bloomberg (and others?) have covered -->
+- **Dunkin' followed rival Starbucks' lead** and announced it will stop charging customers for nondairy coffee drinks. ([Salon](https://www.salon.com/2025/03/02/dunkin-follows-starbucks-ditches-nondairy-milk-surcharge-nationwide/?in_brief=true))
 
-- Coffee tourism: https://www.salon.com/2025/02/23/from-beans-to-brews-coffee-tourism-is-percolating-across-the-globe/
+- **A planned apartment tower in Brooklyn** could become the world's tallest "passive house," a voluntary certification for energy-effecient buildings. ([Bloomberg](https://www.livemint.com/companies/news/brooklyn-rental-tower-to-set-new-record-in-sustainability-push-11739895788341.html))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
