Updating Mar '25 drafts

--- a/2025/2025-03-09-wir.md
+++ b/2025/2025-03-09-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTKTK
+# The most important unanswered question about a U.S. crypto reserve
+## What's the strategy?
 
 ![Broken dishes](https://w3w.news/img/chuttersnap-5000.jpg)
 
@@ -11,7 +11,11 @@
 
 **Call me Ishmael.** Yadda yadda yadda.
 
-<!-- 150-word lead item. Some possibilities:
+<!-- 150-word lead item. Some possibilities...
+
+- AIAIR: AI is like airlines, says Galloway. Riff on the Pivot podcast.
+
+- USSTRATEGY: What's the strategy behind a U.S. strategic crypto reserve?
 
 - CARR: Riff on AoM intvu with author Nicholas Carr re: some of the downsides of digital communication. This could also fit in the news roundup, perhaps in odds & ends: https://www.artofmanliness.com/people/relationships/podcast-1054-familiarity-breeds-contempt-and-other-underappreciated-consequences-of-digital-communication/
 
@@ -23,9 +27,27 @@
 
 ### Week in Review: March 2-8, 2025
 
+- Pentagon signs AI deal. https://www.washingtonpost.com/technology/2025/03/05/pentagon-ai-military-scale/
+
+- Ethena/USDe: New stablecoin gaining some traction. https://www.msn.com/en-us/news/technology/ethena-labs-usde-pushes-circle-and-tether-as-stablecoin-race-heats-up/ar-AA1AgXot | https://www.msn.com/en-us/money/other/ethena-ena-rebounds-by-double-digits-but-risks-remain-with-today-s-token-unlock/ar-AA1Ajjy0 | Bloomberg coverage: https://www.coindesk.com/business/2025/02/24/usde-stablecoin-developer-ethena-raises-usd100m-bloomberg
+
+- ETH Denver videos. TKTKTK
+
+- Bybit updates: https://finance.yahoo.com/news/bybit-offers-5-apr-holding-075126383.html
+
+- Baidu is raising $1.4 billion in yuan-denominated bonds. https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
+
+- New AI deal for the Pentagon. https://www.washingtonpost.com/technology/2025/03/05/pentagon-ai-military-scale/
+
+- IMF/El Salvador update: https://www.forbes.com/sites/digital-assets/2025/03/04/el-salvador-bitcoin-accumulation-needs-to-stop-imf-says/
+
+- US crypto reserve update: <!-- WH meeting skedded Friday. WSJ did a curtain raiser story on Wednesday at https://www.wsj.com/articles/trump-cryptocurrency-reserve-government-1add7b9b -->
+
 - NYT on "vibecoding:" https://www.nytimes.com/2025/02/27/technology/personaltech/vibecoding-ai-software-programming.html?rsrc=ss&unlocked_article_code=1.0E4.WYSb.GCNgaLwTTkv7
 
 - Vox on the broligarchs' vision for America: https://www.vox.com/future-perfect/395646/trump-inauguration-broligarchs-musk-zuckerberg-bezos-thiel
+
+- North Korean defector aiding Ukraine. https://www.wsj.com/world/who-is-lee-seong-min-north-korea-ukraine-d68c8623?st=jqXRRt&reflink=desktopwebshare_permalink | Gladstein on btc as "dictator-proof" money: https://www.journalofdemocracy.org/online-exclusive/how-to-dictator-proof-your-money/
 
 ### Community
 
@@ -35,14 +57,24 @@
 
 -->
 
+- Diversity in Crypto event in Scandanavia: LINK TK
+
+- Niemoller quote: https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
+
 - Carol Kelly on America's mass deportations: https://www.theroot.com/trump-s-mass-deportations-will-cause-millions-of-childr-1851766099
 
 - tk
 
 ### Odds & Ends
 
-- tk
-- tk
+- Biologists trying to revive the wooly mammoth. <!-- Need link -->
+
+- NYC vs Texas strip: https://www.washingtonpost.com/opinions/2025/03/07/texas-dan-patrick-great-steak-controversy/
+
+- Man whose rare blood type was used in medications to treat millions of babies dies at 88: https://www.washingtonpost.com/obituaries/2025/03/03/james-harrison-australian-blood-donor-golden-arm/
+
+- Frenchman fined for using speakerphone in public. https://www.vice.com/en/article/people-are-finally-getting-fined-for-using-their-phone-on-speaker-in-public/
+
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
