Updates to Mar '25 drafts

--- a/2025/2025-03-09-wir.md
+++ b/2025/2025-03-09-wir.md
@@ -1,79 +1,79 @@
-# The most important unanswered question about a U.S. crypto reserve
-## What's the strategy?
+# Is *this* your "crypto president," America?
+## Like something out of a social-media meme, this presidency isn't exactly going as investors thought it would.
 
-![Broken dishes](https://w3w.news/img/chuttersnap-5000.jpg)
+![Elon Musk and Donald Trump field reporters' questions in the Oval Office](https://w3w.news/img/trump-musk-1920.jpg)
 
-*Photo by CHUTTERSNAP via Unsplash*
+*Elon Musk and Donald Trump field reporters' questions in the Oval Office. Official White House photo via Wikimedia Commons*
+
+<hr>
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda.
+**The reality of a second Trump administration** is demonstrably not quite measuring up to crypto investors' giddy hopes during the campaign season.
 
-<!-- 150-word lead item. Some possibilities...
+To be sure, returns in major market metrics from November's election to present still look mostly positive:
 
-- AIAIR: AI is like airlines, says Galloway. Riff on the Pivot podcast.
+- **Bitcoin:** +27%
+- **Ether:** -8.7%
+- **Global Crypto Market Cap:** +25%
+- **S&P 500:** +1%
+- **Gold:** +7%
 
-- USSTRATEGY: What's the strategy behind a U.S. strategic crypto reserve?
+A big caveat, though: The gains above were rung up entirely during America's [unusually long](https://slate.com/news-and-politics/2020/12/presidential-transition-length-reasons-history.html) presidential transition period compared to our global peers.
 
-- CARR: Riff on AoM intvu with author Nicholas Carr re: some of the downsides of digital communication. This could also fit in the news roundup, perhaps in odds & ends: https://www.artofmanliness.com/people/relationships/podcast-1054-familiarity-breeds-contempt-and-other-underappreciated-consequences-of-digital-communication/
+The market picture becomes much bleaker if we zoom in on just the period since Donald Trump was inaugurated and actually assumed duties as U.S. president on Jan. 20.
 
-- ETH Denver: Riff on links to high-priority event. https://www.youtube.com/@ETHDenver/streams
+Market returns from that date to present:
 
-- BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
+- **Bitcoin:** -15%
+- **Ether:** -32%
+- **Global Crypto Market Cap:** -19%
+- **S&P 500:** -4%
+- **Gold:** +6%
 
--->
+**Why it matters:** The crypto industry threw [record support](https://theintercept.com/2024/11/07/crypto-donors-trump-congress-regulations/) behind Trump's campaign in 2024, based largely on his promises to become America's first "crypto president." He pledged easier regulation, closer coordination with the industry in general, and potential creation of a strategic crypto reserve that could become a major buyer of tokens.
+
+Trump has certainly delivered a [lighter regulatory touch](https://thehill.com/policy/technology/5170036-trump-sec-crypto-industry-changes/) and [pro-crypto appointments](https://www.reuters.com/world/us/trump-appoints-former-paypal-coo-david-sacks-ai-crypto-czar-2024-12-06/) to major administration jobs so far. But the rest of the forumula has become muddied.
+
+Three major setbacks:
+
+- **Misadventures in shitcoins.** The Trump family's efforts to enrich itself through [a decentralized finance project](https://www.forbes.com/sites/tonyaevans/2024/09/18/trumps-wlfi-crypto-venture-raises-ethical-concerns-before-election/) and [memecoin launches](https://cryptoslate.com/trumps-memecoin-is-a-self-serving-disaster-risking-legitimacy-of-crypto-mark-cuban/) have played into the worst perceptions of the industry among the general public. They also sap credibility from any new pro-crypto policies, giving opponents an easy opening to allege self-dealing. This stuff is not helpful to the broader crypto industry, period.  
+
+- **The reserve plan undwhelmed.** Markets largely [shrugged off](https://www.coindesk.com/markets/2025/03/08/xrp-ada-sol-fall-deeper-than-bitcoin-as-white-house-crypto-summit-fails-to-wow-traders) Trump's crypto summit Friday, including announcement of an executive order to create a crypto reserve. The plan now chiefly seems to entail the government holding onto bitcoin it has previously seized in criminal cases. But Trump's remarks didn't seem to indicate a wave of new buying that traders had hoped for from the government. And earlier commitments to include certain altcoins in the reserve now seem on shakier ground.
+
+- **He's making the macro environment much worse.** In other words, crypto is proving to be just as vulnerable as everything else to Trump's chaotic economic and national-security policies. This is perhaps the area where crypto's donor class made its greatest miscalculation during the election.
+
+[Blowing up](https://www.wsj.com/world/trump-is-overturning-the-world-order-that-america-built-10981637?st=QeKSmU&reflink=desktopwebshare_permalink) America's post-World War II alliances or [starting a tariff war](https://www.cnn.com/2025/03/09/business/trump-tariffs-canada-mexico-recession/index.html) with the country's three biggest international trading partners simultaneously may not be about crypto per se. But make no mistake, they are very bad for business in their own way.
+
+The problem is that crypto is still largely a speculative, [risk-on](https://www.investopedia.com/terms/r/risk-on-risk-off.asp) investment cateogry. And Trump's macro policies are loudly discouraging all forms of new investment risk, raising new worries about [stagflation](https://www.coindesk.com/markets/2025/03/06/rate-fears-replace-tariff-fears-as-crypto-pulls-back), war, and other pitfalls.
+
+Against that backdrop, investors are seeking safe havens right now, not adding exposure to riskier, volatile stuff. That has meant lightening up on both crypto [and stocks](https://apnews.com/article/stocks-markets-tariffs-rates-jobs-bitcoin-d414257dbb4c9f45b0ad075e12c63451), much to Wall Street's chagrin last week.
+
+In theory, it's still so early in the new presidency that Trump could yet turn things around in terms of implementing changes of lasting value to the crypto community. But to do that, he would likely have to abandon some of his most cherished isolationist policies.
 
 ### Week in Review: March 2-8, 2025
 
-- Pentagon signs AI deal. https://www.washingtonpost.com/technology/2025/03/05/pentagon-ai-military-scale/
+- **The decentralized finance platform Kava** unveiled what is believed to be the largest decentralized AI platform to date, powered by DeepSeek's R1 model. ([CoinDesk](https://www.coindesk.com/sponsored-content/kava-unveils-the-largest-decentralized-ai-model-ushering-in-a-new-era-for-the-crypto-x-ai-space))
 
-- Ethena/USDe: New stablecoin gaining some traction. https://www.msn.com/en-us/news/technology/ethena-labs-usde-pushes-circle-and-tether-as-stablecoin-race-heats-up/ar-AA1AgXot | https://www.msn.com/en-us/money/other/ethena-ena-rebounds-by-double-digits-but-risks-remain-with-today-s-token-unlock/ar-AA1Ajjy0 | Bloomberg coverage: https://www.coindesk.com/business/2025/02/24/usde-stablecoin-developer-ethena-raises-usd100m-bloomberg
+- **The startup Scale AI announced** it has signed a contract with the U.S. Defense Department to lead a project called "Thunderforge" in which commanders will use artificial intelligence to plan and help execute movements of ships, planes and other assets. ([Washington Post](https://news.google.com/read/CBMihwFBVV95cUxOb25VN3JuWG9Rd1l1LWJfYm4wa01iSEI3X05hMFN5cGZBZGV6YjJWYlZkLUhIVktmZ1pXWVJtallQNnctRzNpQVJraTdXSmNYeHZrS3FrZnZjV0tLUnpqN1pTMllzcmc1VnU1Tno2TDBvUFVHTUpkSGI3LVV2eXJ4SVlhekRaM2M?hl=en-US&gl=US&ceid=US%3Aen))
 
-- ETH Denver videos. TKTKTK
+- **Developer Ethena's USDe stablecoin** has surpassed DAI to become [the category's third-largest token](https://www.coindesk.com/business/2025/02/24/usde-stablecoin-developer-ethena-raises-usd100m-bloomberg). USDe's market capitalization has more than doubled since mid-October [to reach $5.5 billion](https://coinmarketcap.com/currencies/ethena-usde/) in recent trading, according to CoinMarketCap. However, that is still a far cry from the valuations of stablecoin leaders [Tether](https://coinmarketcap.com/currencies/tether/) and [USDC](https://coinmarketcap.com/currencies/usd-coin/).
 
-- Bybit updates: https://finance.yahoo.com/news/bybit-offers-5-apr-holding-075126383.html
+- **ICYMI:** Organizers of the recent ETH Denver conference have now posted videos of the event's panel discussions and keynotes [on their YouTube channel](https://www.youtube.com/@ETHDenver/videos).
 
-- Baidu is raising $1.4 billion in yuan-denominated bonds. https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
+- **CoinDesk's Tom Carreras reports** that North Korea has laundered [over $5 billion in stolen crypto](https://www.coindesk.com/policy/2025/03/07/here-s-how-north-korea-launders-billions-of-stolen-crypto) since 2017 using over-the-counter brokers, casinos in Macau, and other intermediaries to avoid regulated exchanges' safeguards against such activity.
 
-- New AI deal for the Pentagon. https://www.washingtonpost.com/technology/2025/03/05/pentagon-ai-military-scale/
-
-- IMF/El Salvador update: https://www.forbes.com/sites/digital-assets/2025/03/04/el-salvador-bitcoin-accumulation-needs-to-stop-imf-says/
-
-- US crypto reserve update: <!-- WH meeting skedded Friday. WSJ did a curtain raiser story on Wednesday at https://www.wsj.com/articles/trump-cryptocurrency-reserve-government-1add7b9b -->
-
-- NYT on "vibecoding:" https://www.nytimes.com/2025/02/27/technology/personaltech/vibecoding-ai-software-programming.html?rsrc=ss&unlocked_article_code=1.0E4.WYSb.GCNgaLwTTkv7
-
-- Vox on the broligarchs' vision for America: https://www.vox.com/future-perfect/395646/trump-inauguration-broligarchs-musk-zuckerberg-bezos-thiel
-
-- North Korean defector aiding Ukraine. https://www.wsj.com/world/who-is-lee-seong-min-north-korea-ukraine-d68c8623?st=jqXRRt&reflink=desktopwebshare_permalink | Gladstein on btc as "dictator-proof" money: https://www.journalofdemocracy.org/online-exclusive/how-to-dictator-proof-your-money/
-
-### Community
-
-<!--
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
-
--->
-
-- Diversity in Crypto event in Scandanavia: LINK TK
-
-- Niemoller quote: https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
-
-- Carol Kelly on America's mass deportations: https://www.theroot.com/trump-s-mass-deportations-will-cause-millions-of-childr-1851766099
-
-- tk
+- **It appears Ripple co-founder Chris Larsen** lost roughly $150 million worth of tokens last year to hackers because of a leak of his LastPass user data. ([The Block](https://www.theblock.co/post/345212/ripple-co-founder-chris-larsen-losing-over-100-million-of-xrp-tied-to-lastpass-hack-says-zachxbt))  
 
 ### Odds & Ends
 
-- Biologists trying to revive the wooly mammoth. <!-- Need link -->
+- **James Harrison,** an Australian railway clerk who helped save 2.4 million babies by donating the rare antibodies in his blood every two weeks for more than 60 years, died at the age of 88. ([Washington Post](https://news.google.com/read/CBMipAFBVV95cUxQQkNtbENKdldjOWdVWmliRXV4ZTJTOUxqWXppYVRDQ0xwM1kxczNaaTNneXMzcVJRX1k0bVZsOG5SX3NoVzRHNk1Yc2FldUlEYTIxWVdNM2ZGSGs1UnpkNTJ0Y3NUMVhxaHhwdnpaTEZfQ3JyeEZpVjlkQnRwT1h3LXJlbC00anQ4S0xmckVmcW9kZDI5Y2V3dldpWGhZUmhyUnRMTw?hl=en-US&gl=US&ceid=US%3Aen))
 
-- NYC vs Texas strip: https://www.washingtonpost.com/opinions/2025/03/07/texas-dan-patrick-great-steak-controversy/
+- **Scientists  at the biotech company Colossal Biosciences** have genetically engineered mice with shaggy fur like the woolly mammoth's. The experiments could someday lead to a full-fledged revival of the woolly mammoth species, which has been extinct for 4,000 years. ([AP](https://apnews.com/article/colossal-biosciences-woolly-mammoth-b381f6f48eeed0828535cf9604263140))
 
-- Man whose rare blood type was used in medications to treat millions of babies dies at 88: https://www.washingtonpost.com/obituaries/2025/03/03/james-harrison-australian-blood-donor-golden-arm/
-
-- Frenchman fined for using speakerphone in public. https://www.vice.com/en/article/people-are-finally-getting-fined-for-using-their-phone-on-speaker-in-public/
+- **A Frenchman has been fined for using speakerphone** to talk to his sister on a public railway platform in Nantes. ([CNN](https://www.cnn.com/2025/02/07/travel/french-fine-speakerphone-train-scli-intl/index.html))
 
 
 _**That's it for now. Thanks for reading the newsletter today!**_
