Adding Coinbase story

--- a/2025/2025-03-16-wir.md
+++ b/2025/2025-03-16-wir.md
@@ -27,6 +27,8 @@
 
 - **U.S. residents missed out** on as much as $5 billion in crypto airdrops from 2020 to 2024 due to geoblocking required by the country's financial regulations, according to a [new research report](https://airdropreport2025.dragonfly.xyz/Dragonfly-s-State-of-Airdrops-Report-2025-1b1af13b644180c8aff9c2bd0d222e14) from venture firm Dragonfly.
 
+- Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu)) 
+
 - Genius Act updates: New stablecoin bill tk ([]())
 
 - Effect of power tarriffs on US/Canadian bitcoin miners. <!-- Bitfarms CEO discussed on Bloomberg Crypto Tuesday. Link to that clip, or find coverage elsewhere. --> ([]())
