Fleshing out news summary for 16 Mar

--- a/2025/2025-03-16-wir.md
+++ b/2025/2025-03-16-wir.md
@@ -9,11 +9,15 @@
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda.
+**A couple of new -- and sensible very sensible --takes on the AI boom:**  
+
+- Pivot's Galloway says long-term model may be akin to airlines. Consumers realize most of the benefits, but the business is brutal for operators. <!-- Link tk -->
+
+- WSJ on lessons from dotcom bubble: <!-- Link TK -->
 
 <!-- 150-word lead item. Some possibilities...
 
-- AIAIR: AI is like airlines, says Galloway. Riff on the Pivot podcast.
+- AISENSE: Highlight a couple of seAI is like airlines, says Galloway. Riff on the Pivot podcast.
 
 - UNCOOL: Riff on Winkie's in Slate rant about the "uncoolness" of Trump II. This could also be a social post.
 
@@ -29,11 +33,29 @@
 
 - Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu)) 
 
-- Genius Act updates: New stablecoin bill tk ([]())
+- Genius Act update  ([Decrypt](https://decrypt.co/309492/senate-banking-committee-to-vote-on-bipartisan-genius-stablecoin-bill-this-week)) <!-- Need an updated week Friday -->
 
 - Effect of power tarriffs on US/Canadian bitcoin miners. <!-- Bitfarms CEO discussed on Bloomberg Crypto Tuesday. Link to that clip, or find coverage elsewhere. --> ([]())
 
 - Big Circle upgrades ([CoinDesk](https://www.coindesk.com/tech/2025/03/10/circle-upgrades-cross-chain-transfer-protocol-promising-faster-usdc-settlements)) 
+
+- ICMI: Bitcoiner Dan Held on Trump family enriching themselves. ([Cointelegraph](https://www.youtube.com/watch?v=6UnogdVQWrE&ab_channel=Cointelegraph))
+  
+- Update on Ethereum's Pectra upgrade ([Decrypt](https://decrypt.co/309520/ethereum-testnet-finality-pectra-upgrade))
+
+- OpenAI closes $12B startup deal ([Decrypt](https://decrypt.co/309481/chatgpt-maker-openai-inks-12b-deal-with-coreweave-ahead-of-planned-ipo))
+
+- Lummis introduces bill to create promised crypto reserve. ([The Block](https://www.theblock.co/post/345689/sen-lummis-reintroduces-bill-to-create-trumps-planned-strategic-bitcoin-reserve?utm_source=rss&utm_medium=rss))
+  
+- Nuffle Labs re-brand ([The Block](https://www.theblock.co/post/345571/near-foundations-independent-entity-nuffle-labs-rebrands-to-moremarkets-pivots-to-creating-an-integrated-liquidity-marketplace?utm_source=rss&utm_medium=rss))
+
+- Cathie Woods has been buying COIN shares during the recent stock-market dump. ([The Block](https://www.theblock.co/post/345639/cathie-wood-ark-invest-coinbase-shares-market-carnage?utm_source=rss&utm_medium=rss))
+  
+- StarkWare creates BTC reserve ([The Block](https://www.theblock.co/post/345659/starkware-bitcoin-reserve?utm_source=rss&utm_medium=rss))
+
+- tk ([]())
+  
+- tk ([]())
 
 ### Community
 
