Adding photo link for 16 Mar '25

--- a/2025/2025-03-16-wir.md
+++ b/2025/2025-03-16-wir.md
@@ -1,9 +1,9 @@
 # tktk
 ## tktk
 
-![Broken dishes](https://w3w.news/img/chuttersnap-5000.jpg)
+![Robet manning a workstation](https://unsplash.com/photos/brown-train-vehicle-machine-_HRi5kBwGh0)
 
-*Photo by CHUTTERSNAP via Unsplash*
+*Photo by Rod Long via Unsplash*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
