Fixing broken photo link

--- a/2025/2025-03-16-wir.md
+++ b/2025/2025-03-16-wir.md
@@ -1,7 +1,7 @@
 # tktk
 ## tktk
 
-![Robet manning a workstation](https://unsplash.com/photos/brown-train-vehicle-machine-_HRi5kBwGh0)
+![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1)
 
 *Photo by Rod Long via Unsplash*
 
